[package]
name = "ipc-server"
version = "0.1.0"
edition = "2021"
description = "A lightweight, lazy, asynchronous interprocess message passing server/client interface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cavemanloverboy/ipc-server.git"
authors = ["Cavey Cool <caveycool@gmail.com>"]

[dependencies]
mio = { version = "1.0.0", features = ["os-poll", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }


[[example]]
name = "simple"
path = "examples/simple/simple.rs"
