[package]
name = "ipc-server"
version = "0.3.2"
edition = "2021"
description = "A lightweight, lazy, asynchronous interprocess message passing server/client interface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cavemanloverboy/ipc-server.git"
authors = ["Cavey Cool"]

[dependencies]
bincode = "1.3.3"
mio = { version = "1.0.0", features = ["os-poll", "net"] }
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }


[[example]]
name = "simple"
path = "examples/simple/simple.rs"
